--- a/quicksort_by_prompting.ipynb
+++ b/quicksort_by_prompting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d296fff7-c730-432b-8169-0e512f09f02b",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.10.12 (main, May 27 2025, 17:12:29) [GCC 11.4.0]\n"
+      "3.13.5 (main, Jun 12 2025, 08:56:15) [GCC 11.4.0]\n"
      ]
     }
    ],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "036684c3-b4b8-47dd-aab3-5e725978e02f",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
     "def ask_for_greater_one(a, b):\n",
     "    if a == b:\n",
     "        return 2\n",
-    "    print(\"Which is greater?\")\n",
+    "    print(\"Which one do you like more?\")\n",
     "    print(\"a: '{}'\".format(a))\n",
     "    print(\"b: '{}'\".format(b))\n",
     "    \n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "b32c7709-8b0f-41f8-96ed-50da17f140c2",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "1b19ed90-b4b0-4b8d-a39e-8c906ee59697",
    "metadata": {},
    "outputs": [],
@@ -102,23 +102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "8616ff31-5c37-4aff-b0d9-d37b0b2e9036",
    "metadata": {},
    "outputs": [],
    "source": [
     "data = [\n",
-    "    \"Gemini\",\n",
-    "    \"AI Chat\",\n",
-    "    \"DeepSeek\",\n",
-    "    \"Le Chat\",\n",
-    "    \"Grok\",\n",
+    "    \"Apple\",\n",
+    "    \"Orange\",\n",
+    "    \"Watermelon\",\n",
+    "    \"Kiwi\",\n",
+    "    \"Pineapple\",\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "51aed148-7b5a-496d-988f-037594cd54ea",
    "metadata": {},
    "outputs": [
@@ -126,77 +126,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Which is greater?\n",
-      "a: 'Gemini'\n",
-      "b: 'Grok'\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Answer:  a\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Which is greater?\n",
-      "a: 'AI Chat'\n",
-      "b: 'Grok'\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Answer:  a\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Which is greater?\n",
-      "a: 'DeepSeek'\n",
-      "b: 'Grok'\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Answer:  a\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Which is greater?\n",
-      "a: 'Le Chat'\n",
-      "b: 'Grok'\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Answer:  a\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Which is greater?\n",
-      "a: 'AI Chat'\n",
-      "b: 'Gemini'\n"
+      "Which one do you like more?\n",
+      "a: 'Apple'\n",
+      "b: 'Pineapple'\n"
      ]
     },
     {
@@ -211,9 +143,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Which is greater?\n",
-      "a: 'DeepSeek'\n",
-      "b: 'Gemini'\n"
+      "Which one do you like more?\n",
+      "a: 'Orange'\n",
+      "b: 'Pineapple'\n"
      ]
     },
     {
@@ -228,9 +160,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Which is greater?\n",
-      "a: 'Le Chat'\n",
-      "b: 'Gemini'\n"
+      "Which one do you like more?\n",
+      "a: 'Watermelon'\n",
+      "b: 'Pineapple'\n"
      ]
     },
     {
@@ -245,9 +177,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Which is greater?\n",
-      "a: 'Le Chat'\n",
-      "b: 'DeepSeek'\n"
+      "Which one do you like more?\n",
+      "a: 'Kiwi'\n",
+      "b: 'Pineapple'\n"
      ]
     },
     {
@@ -262,22 +194,67 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "['Grok', 'AI Chat', 'Gemini', 'Le Chat', 'DeepSeek']\n"
+      "Which one do you like more?\n",
+      "a: 'Apple'\n",
+      "b: 'Kiwi'\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Answer:  b\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Which one do you like more?\n",
+      "a: 'Orange'\n",
+      "b: 'Watermelon'\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Answer:  b\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "quickSort(data, 0, len(data) - 1)\n",
-    "print(data)"
+    "quickSort(data, 0, len(data) - 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2f8bda85-ceee-4ceb-ace5-f52a8e4992d1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your sorted list according to your preferences:\n",
+      "\n",
+      "['Apple', 'Kiwi', 'Pineapple', 'Orange', 'Watermelon']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Your sorted list according to your preferences:\\n\")\n",
+    "print(data)"
+   ]
   }
  ],
  "metadata": {
@@ -296,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
